--- a/angular/components/inner/inner.template.html
+++ b/angular/components/inner/inner.template.html
@@ -1,6 +1,6 @@
 <md-content class="md-padding" layout-xs="column" layout="row">
 
-    <div flex-xs="" flex-gt-xs="50" layout="column">
+    <div flex-xs="" flex-gt-xs="100" layout="column">
 
         <md-card md-theme="default">
 
@@ -22,7 +22,7 @@
             </md-card-content>
 
             <md-card-actions layout="row" layout-align="end center">
-                    <md-button>Action 1</md-button>
+                    <md-button ng-click="$ctrl.showAlert()">Show alert</md-button>
                     <md-button>Action 2</md-button>
             </md-card-actions>
 
